--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,47 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
+<ion-menu side="end" menuId="settings" contentId="main">
+  <ion-header>
+    <ion-toolbar color="primary">
+      <ion-title>
+        <i class="fas fa-cog mr-1"></i>Settings
+      </ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content color="success">
+    <ion-item lines="full" color="success" button (click)="openProfile()">
+      <ion-label color="primary">
+        Profile
+      </ion-label>
+      <ion-icon slot="start" name="person" color="primary">
+      </ion-icon>
+    </ion-item>
+    <ion-item lines="full" color="success">
+      <ion-label color="primary">
+        Settings
+      </ion-label>
+      <ion-icon slot="start" name="settings" color="primary"></ion-icon>
+    </ion-item>
+    <ion-item lines="full" color="success" button (click)="logout()">
+      <ion-label color="primary">
+        Logout
+      </ion-label>
+      <ion-icon name="power" color="primary" slot="start"></ion-icon>
+    </ion-item>
+  </ion-content>
+</ion-menu>
+
+<ion-header>
+  <ion-toolbar color="primary" style="border-bottom: 2px solid #6FFFE9;">
+    <ion-buttons slot="secondary">
+      <ion-button (click)="openSettings()">
+        <ion-icon name="settings"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    <ion-title style="text-align: center;">
+      <img src="../../assets/logos/tracker-light.png" style="width:60%">
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+<ion-content id="main">
+  <ion-router-outlet></ion-router-outlet>
 </ion-content>
