--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
   <ion-grid>
     <ion-row>
       <ion-col size="12">
-        <ion-card class="widget-card" (click)="widgetClicked('balanceWidget')">
+        <ion-card class="widget-card" (click)="widgetClicked('cards')">
           <ion-card-header style="padding: 0px;">
             <table class="widget-class">
               <tr>
@@ -22,7 +22,7 @@
         </ion-card>
       </ion-col>
       <ion-col size="12">
-        <ion-card class="widget-card" (click)="widgetClicked('expenseWidget')">
+        <ion-card class="widget-card" (click)="widgetClicked('sports')">
           <ion-card-header style="padding: 0px;">
             <table class="widget-class">
               <tr>
