Build Issue fixed and minor issue fixed

--- a/src/app/playing-cards/uno/uno.component.html
+++ b/src/app/playing-cards/uno/uno.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="gameForm">
   <ion-list>
     <ion-list-header class="list-header-custom">
-      <ion-label color="primary">UNO</ion-label>
+      <ion-label color="primary">{{gameTitle}}</ion-label>
     </ion-list-header>
     <ng-container *ngIf="!isNumberOfPlayersAdded">
       <ion-item>
@@ -11,7 +11,7 @@
       <ion-grid>
         <ion-row>
           <ion-col>
-            <ion-button expand="block" (click)="addPlayerDetails(gameForm)">Add Player Details</ion-button>
+            <ion-button expand="block" (click)="addPlayerDetails()">Add Player Details</ion-button>
           </ion-col>
         </ion-row>
       </ion-grid>
@@ -24,7 +24,7 @@
       <ion-grid>
         <ion-row>
           <ion-col>
-            <ion-button expand="block" (click)="startGame(gameForm)">Start Game</ion-button>
+            <ion-button expand="block" (click)="startGame()">Start Game</ion-button>
           </ion-col>
         </ion-row>
       </ion-grid>
